After lunch break

--- a/view/frontend/layout/survey_index_index.xml
+++ b/view/frontend/layout/survey_index_index.xml
@@ -9,3 +9,7 @@
        </referenceContainer>
    </body>
 </page>
+
+
+<!-- in the class path was class="Magento\Framework\View\Element\Template"
+in the training instruction-->
