--- a/view/frontend/layout/survey_surveypage_result.xml
+++ b/view/frontend/layout/survey_surveypage_result.xml
@@ -2,9 +2,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Survey\SurveyPage\Block\View"
-                   name="post.view"
-                   template="Survey_SurveyPage::post/view.phtml" />
+            <block class="Survey\SurveyPage\Block\Answers"
+                   name="result"
+                   template="Survey_SurveyPage::result.phtml" />
         </referenceContainer>
     </body>
 </page>
