--- a/view/frontend/templates/post/view.phtml
+++ b/view/frontend/templates/post/view.phtml
@@ -1,4 +1,4 @@
 <?php /** @var Survey\SurveyPage\Block\View $block */ ?>
-<h1><?php echo $block->getPost()->getAnswerId(); ?></h1>
-<p><?php echo $block->getPost()->getQuestion1(); ?></p>
-<p><?php echo $block->getPost()->getQuestion2(); ?></p>
+<h1><?php echo $block->getAnswer()->getId(); ?></h1>
+<p><?php echo $block->getAnswer()->getQuestion1(); ?></p>
+<p><?php echo $block->getAnswer()->getQuestion2(); ?></p>
