--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -1,6 +1,6 @@
 
 
-<form class="form" action="<?php echo $block->getFormAction() ?>" method="post">
+<form class="form" action="/survey/index/result" method="post">
 
 <fieldset class="fieldset">
     <legend class="legend"><span>Survey</span></legend><br>
