--- a/view/frontend/templates/result.phtml
+++ b/view/frontend/templates/result.phtml
@@ -1,8 +1,7 @@
-<?php /** @var Survey\SurveyPage\Block\Posts $block */ ?>
+<?php /** @var Survey\SurveyPage\Block\Posts $block **/ ?>
 <h1>Survey Answers</h1>
-<?php foreach($block->getAnswers() as $post): ?>
-    <?php /** @var Survey\SurveyPage\Model\Post */ ?>
-    <h2><a href="<?php echo $block->getAnswerUrl($post);?>"><?php echo $post->getId(); ?></a></h2>
-    <p><?php echo $post->getQuestion1(); ?></p>
-    <p><?php echo $post->getQuestion2(); ?></p>
-<?php endforeach; ?>
+
+Here comes the Answers
+
+
+<?php echo $_POST['quesstion1']; ?>
