after making result page and success connect

--- a/view/frontend/templates/result.phtml
+++ b/view/frontend/templates/result.phtml
@@ -1,7 +1,7 @@
-<?php /** @var Survey\SurveyPage\Block\Posts $block **/ ?>
-<h1>Survey Answers</h1>
 
-Here comes the Answers
+<h1>Thank you for the survey</h1>
 
+<p>It will help us to become better provide.</p>
 
-<?php echo $_POST['quesstion1']; ?>
+<p>We appreciate your opinion</p>
+
