--- a/view/frontend/layout/survey_index_index.xml
+++ b/view/frontend/layout/survey_index_index.xml
@@ -1,6 +1,6 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
    <head>
-       <title>Survey renamed</title>
+       <title>Survey</title>
    </head>
    <body>
        <referenceContainer name="content">
