before deploy sample data

--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -1,7 +1,7 @@
 
 <?php $msg;?>
-<form class="form" action="/magento/survey/index/result" method="post">
-<!--in the form tag action url could be differ because i'm testing in the xampp, uniserver and virtual server but
+<form class="form" action="/magento2/survey/index/result" method="post">
+<!--in the form tag action property url could be differ because i'm testing in the xampp, uniserver and virtual server but
 every magento installation basic url was different so it can be defined depends on the basic magento url-->
 
 <fieldset class="fieldset">
@@ -62,3 +62,4 @@ every magento installation basic url was different so it can be defined depends 
 </div>
 
 </form>
+
