--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -46,6 +46,9 @@ every magento installation basic url was different so it can be defined depends 
         <div class="control">
                    <select name="product" id="product">
                    <?php
+                   //Many says that using objectmanager could cause dependency issue
+                   //but it workds on me and seems easy if it made trouble i could take a look more
+                   //for now running out of time so..
                         $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
 
                         $productCollection = $objectManager->create('Magento\Catalog\Model\ResourceModel\Product\Collection');
