widget border option added

--- a/view/frontend/templates/widget/widget.phtml
+++ b/view/frontend/templates/widget/widget.phtml
@@ -12,12 +12,21 @@
 	$productCollection = $objectManager->create('Survey\SurveyPage\Model\ResourceModel\Answer\Collection');
 
 	$collection = $productCollection;
-	echo "<table><tr><th>Was our service satisfied?</th>";
+	$border = $block->getData('border');
+
+	if($border == "n" || $border == "N"){
+		echo "<table>";
+	}
+	else{
+		echo "<table border=\'1\'>";
+	}
+
+	echo "<tr><th>Was our service satisfied?</th>";
 	echo "<th>Did you have problem with finding product?</th>";
 	echo "<th>Is there anything that we can make it better among our services?</th>";
 	echo "<th>What product was that looking for?</th>";
-	$count = $block->getData('product_count');
-	if($count==null){
+	
+	
 		foreach ($collection as $product){
 		echo "<tr>";
 		echo "<td>".$product->getQuestion1()."</td>";
@@ -25,16 +34,10 @@
 		echo "<td>".$product->getQuestion3()."</td>";
 		echo "<td>".$product->getProduct()."</td></tr>";
 		}
-	}
-	else{
-		for($i=0; $i<$count;$i++)
-		echo "<tr>";
-		echo "<td>".$product->getQuestion1()."</td>";
-		echo "<td>".$product->getQuestion2()."</td>";
-		echo "<td>".$product->getQuestion3()."</td>";
-		echo "<td>".$product->getProduct()."</td></tr>";
-	}
+	
 	echo "</table>";
+	
+	
 	?>
 <?php endif; ?>
 
